post: use 640px width; internals: prepare to add routing for content

--- a/src/ui/components/content/Comment.pug
+++ b/src/ui/components/content/Comment.pug
@@ -1,5 +1,5 @@
 script.
-	import ActionText from '../generic/ActionText.pug'
+	import ActionText from '../system/ActionText.pug'
 	import Byline from './Byline.pug'
 	import datasets from '../../../api/datasets/store.coffee'
 	export id = ''
@@ -23,7 +23,7 @@ script.
 
 style.
 	[role=comment]
-		width 480px
+		width 640px
 	.comment-body
 		font-size 15px
 	.comment-replies
