--- a/src/ui/components/content/Headline.pug
+++ b/src/ui/components/content/Headline.pug
@@ -1,6 +1,6 @@
 script.
 	import api from '../../../api/index.js'
-	export id = ''
+	export id = null
 	export onSelect = null
 	post = null
 	api.watch(id, (x) -> { data: post } = x)
