--- a/src/ui/components/content/Comment.pug
+++ b/src/ui/components/content/Comment.pug
@@ -1,7 +1,7 @@
 script.
 	import api from '../../../api/index.js'
+	import StringFormat from '../../../lib/StringFormat.coffee'
 	import ActionText from '../system/ActionText.pug'
-	import Byline from './Byline.pug'
 	export id = null
 	export showReplies = true
 	comment = null
@@ -9,22 +9,64 @@ script.
 
 {#if comment}
 	article(role='comment')
-		Byline(name={comment.author} distinguish={comment.distinguished} isOP={comment.is_submitter} flairText={comment.author_flair_text})
-		section.comment-body
-			{@html comment.body_html.slice(16, -6).replace(/<p>&#x200B;<\/p>/g, '')}
-		{#if showReplies && comment.replies.length > 0}
-			ol.comment-replies
-				{#each comment.replies as replyId}
-					svelte:self(id={replyId})
-				{#if comment.more_replies}
-					ActionText(text='More replies...')
-				{#if comment.deeper_replies}
-					ActionText(text='Continue this thread...')
+		.comment-gutter
+			button.comment-vote-button ^
+			button.comment-collapse-button
+		.comment-main
+			address
+				data.comment-score(value={comment.score}) {StringFormat.score(comment.score_hidden || comment.score)}
+				time(datetime={Date.seconds(comment.created_utc)}) {StringFormat.date(Date.seconds(comment.created_utc))}
+				span {StringFormat.distinguish(comment.distinguish)}
+			section.comment-body
+				{@html comment.body_html.slice(16, -6).replace(/<p>&#x200B;<\/p>/g, '')}
+			{#if showReplies && comment.replies.length > 0}
+				ol.comment-replies
+					{#each comment.replies as replyId}
+						svelte:self(id={replyId})
+					{#if comment.more_replies}
+						ActionText(text='More replies...')
+					{#if comment.deeper_replies}
+						ActionText(text='Continue this thread...')
 
 style.
 	[role=comment]
-		max-width 100%
+		display flex
+		gap 1ch
+		margin-top 2ch
+	.comment-body
+		font-size 14px
+		line-height 20px
+		width 1220px
+		padding 0.75ch 1.5ch 1.5ch 0
+	.comment-collapse-button
+		background transparent
+		border 0
+		flex 1
+		margin 0 auto
+	.comment-gutter
+		display flex
+		flex-flow column nowrap
+		padding-top 3ch
 	.comment-replies
-		border-left 1px solid rgb(96,96,96) // Neutral 4-0
-		margin 20px
-		padding-left 10px
+		margin-left -1ch
+		padding-left 0
+	.comment-score
+		font-size 13px
+	.comment-vote-button
+		background transparent
+		border 0
+		border-radius 99px
+		font-size 14pt
+		font-weight bold
+		height 1em
+		opacity 0.3
+		padding-top 2px
+		width 1em
+		&:active
+			background rgba(0,0,0,0.3)
+	address
+		font-size 10px
+		font-style normal
+		font-weight bold
+		opacity 0.3
+		text-transform uppercase
