--- a/src/ui/components/content/Post.pug
+++ b/src/ui/components/content/Post.pug
@@ -62,16 +62,16 @@ style.
 	[role=post]
 		margin 0 auto
 		padding 60px 0
-		width 1260px
+		width 90ch
 	.post-body
-		margin-top 30px
+		margin-top 2em
 	.post-replies
-		margin-top 15px
+		margin-top 2em
 		padding-inline-start 0
 	.prediction-options > li
 		display flex
 	figure
-		margin-top 30px
+		margin-top 1em
 	iframe
 		height 360px
 		width 640px
