--- a/src/ui/stylesheets/global.styl
+++ b/src/ui/stylesheets/global.styl
@@ -11,6 +11,9 @@ html
 
 // Body
 body
+	align-items center
+	display flex
+	flex-flow column nowrap
 	margin 0
 
 // Paragraphs
@@ -29,6 +32,8 @@ a
 	color mediumslateblue
 	font-weight 500
 	text-decoration none
+	& > img
+			cursor zoom-in
 blockquote
 	background rgba(0,0,0,0.05)
 	display inline-block
@@ -91,6 +96,10 @@ th
 // Media
 figure
 	margin 0
+	margin-top 0.66em
+iframe
+	background rgba(0,0,0,0.1)
+	border 0
 img
 	display block
 
