post: don't break words in links unless no better option

--- a/src/ui/stylesheets/global.styl
+++ b/src/ui/stylesheets/global.styl
@@ -32,7 +32,7 @@ a
 	color mediumslateblue
 	font-weight 500
 	text-decoration none
-	word-break break-all
+	word-break break-word
 	& img
 		border 1px solid transparent
 		cursor zoom-in
