--- a/src/ui/stylesheets/global.styl
+++ b/src/ui/stylesheets/global.styl
@@ -6,8 +6,8 @@
 
 // General
 html
-	font 400 14px/18px 'arimo', 'arial', 'helvetica', sans-serif
-	letter-spacing 0.5px
+	font 400 10pt/18px 'arimo', 'arial', 'helvetica', sans-serif
+	letter-spacing 0.33px
 
 // Body
 body
@@ -39,11 +39,11 @@ a
 		&:hover
 			border-color inherit
 blockquote
-	background rgba(0,0,0,0.05)
-	display inline-block
+	border-left 1px solid gainsboro
 	margin 0
 	margin-top 0.66em
-	padding 0.5ch 1ch
+	opacity 0.66
+	padding-inline-start 2ch
 pre
 	display inline-block
 	margin-top 0.66em
