internals: move StringFormat API ID functions into API itself

--- a/src/ui/components/layouts/Listing.pug
+++ b/src/ui/components/layouts/Listing.pug
@@ -3,7 +3,6 @@ script.
 	import Comment from '../content/Comment.pug'
 	import Headline from '../content/Headline.pug'
 	import Post from '../content/Post.pug'
-	import StringFormat from '../../../lib/StringFormat.coffee'
 	export id = null
 	itemIds = null
 	loading = false
@@ -19,9 +18,9 @@ script.
 	{:else if itemIds && itemIds.length}
 		ol
 			{#each itemIds as itemId}
-				{#if StringFormat.datasetType(itemId) === 'comment'}
+				{#if api.parse.datasetType(itemId) === 'comment'}
 					Comment(id={itemId})
-				{:else if StringFormat.datasetType(itemId) === 'post'}
+				{:else if api.parse.datasetType(itemId) === 'post'}
 					Headline(id={itemId} selected={selectedId == itemId} onSelect={() => selectedId = itemId})
 	{#if selectedId}
 		{#key selectedId}
