internals: move UI-only library code into ui/tools

--- a/src/ui/components/content/Comment.pug
+++ b/src/ui/components/content/Comment.pug
@@ -1,6 +1,6 @@
 script.
 	import api from '../../../api/index.js'
-	import StringFormat from '../../../lib/StringFormat.coffee'
+	import StringFormat from '../../tools/StringFormat.coffee'
 	import ActionText from '../system/ActionText.pug'
 	export id = null
 	export showReplies = true
